# ojt

./: README.md  userdatanew.csv  users.csv
Frontend/: index.html  index2.html  script.js  style.css  styles.css
personal_finance/: LICENSE  README.md  __init__.py  __main__.py  budget.csv  cli.py  config.py  exceptions.py  expenses.csv  exported_expenses_Ujan2009.csv  logger.py  login.py  password.csv  pyproject.toml  savings.csv  userdata.csv  userdatanew.csv  users.csv
personal_finance/src/personal_finance/: main.py
personal_finance/src/personal_finance_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
personal_finance_cli/: README.md
