[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_finance_cli"
version = "0.0.1"
authors = [
  { name="Rupneel", email="rupneel@example.com" },
]
description = "A simple personal finance CLI manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
personal-finance = "personal_finance.main:main"

[tool.setuptools.packages.find]
where = ["src"]
